--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
+  background-color: blue;
+  aspect-ratio: 1;
 }
 
 .App-header {
@@ -25,8 +27,10 @@
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
+    border-radius: 0;
   }
   to {
     transform: rotate(3600deg);
+    border-radius: 50%;
   }
 }
